# rag_system

./: .env.example  .gitignore
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_documents_and_chunks.py
backend/app/: app.py  config.py
backend/app/db/: __init__.py  health.py  session.py
backend/app/db/models/: __init__.py  chunk.py  document.py
backend/app/services/: document_indexing_service.py  parser_service.py
backend/app/services/complex_parser/: __init__.py  converter.py
backend/app/services/parser/: __init__.py  base.py  factory.py  simple.py
backend/app/services/parser/complex/: __init__.py  llm_repair.py  ocr_repair.py  parser.py  postprocess.py  quality_audit.py  table_repair.py
