[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "docling>=2.113.0",
    "docling-core>=2.87.1",
    "dotenv>=0.9.9",
    "fastapi>=0.139.2",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.9",
    "langchain-openai>=1.3.5",
    "numpy>=2.5.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pymupdf>=1.28.0",
    "python-multipart>=0.0.32",
    "rapidocr>=3.9.2",
    "rapidocr-onnxruntime>=1.4.4",
    "sqlmodel>=0.0.39",
    "uvicorn>=0.51.0",
]
